efk-stack-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: efk-stack-policy
  namespace: elastic-stack
spec:
  podSelector: 
    matchLabels: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: 
            matchLabels: {}
          namespaceSelector:
            matchLabels:
              name: elastic-stack
  egress:
    - to:
        - podSelector: 
            matchLabels: {}
          namespaceSelector:
            matchLabels:
              name: elastic-stack
